--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -1,6 +1,9 @@
 <footer>
     footer
 </footer>
+<script src="js/jquery-3.5.1.min.js"></script>
+<script src="js/slick.min.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> -->
 <script src="js/main.min.js"></script>
 </body>
 
