--- a/app/components/header.html
+++ b/app/components/header.html
@@ -6,10 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- iconfont -->
+        <!-- <link rel="stylesheet" href="css/customiconsfont.css">
+        <link rel="stylesheet" href="css/iconsfont.css"> -->
+    <!-- iconfont end -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
-    <header>
+   <!--  <header>
         header
-    </header>
+    </header> -->
