--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,7 +1,885 @@
+/* reset style  */
+/* *,
+*:before,
+*:after {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
+}
+html,
+body {
+    height: 100%;
+    background-color: #333;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: #fff;
+    font-size: 20px;
+} */
+/* reset style end */
+/* подключение шрифтов google fonts
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');*/
 
+/* 
+нестандартный шрифт (ttf->font2web.com )
+@font-face {
+    font-family: 'PFDinTextCondPro';
+    src: url('../fonts/PFDinTextCondPro-Regular.woff2') format('woff2'),
+        url('../fonts/PFDinTextCondPro-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+*/
+
+/* адаптивный шрифт
+$maxWidth: 1280;*/
+@mixin adaptiv-font-size($pcSize, $mobSize) {
+    $addSize: $pcSize - $mobSize;
+    $addMobSize: $addSize + $addSize * 0.7;
+    @media (max-width: 767px) {
+        font-size: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 375px) / #{$maxWidth}));
+    }
+    @media (min-width: 767px) {
+        font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$maxWidth}));
+    }
+}
+/*.atext{
+    @include adaptiv-font-size(90, 14)
+    //font-style: italic;
+}
+.textoriginal{
+    @include adaptiv-font-size(30, 18)
+    //font-style: italic;
+}*/
+
+/* fonts */
+/*
 .main {
     padding: 0;
     .inner {
         margin: 0;
     }
 }
+.text{
+    font-family: 'PFDinTextCondPro';
+    //font-family: "PT Sans";
+    @include adaptiv-font-size(30, 18)
+    //font-style: italic;
+}
+.link{
+    font-size: 40px;
+    color: orange;
+} */
+/* fonts end */
+
+/* tabs */
+/*.wrapper{
+    background-color: black;
+    min-height: 100%;
+    position: relative;
+    overflow: hidden;
+}
+.content{
+    padding: 50px 0;
+    max-width: 1000px;
+    margin: 0px auto;
+}
+.tabs{
+    margin: 0 0 50px 0;
+}
+.tabs__items{
+    display: flex;
+}
+.tabs__item{
+    flex: 0 1 33.333%; 
+    height: 50px; 
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #fff;
+}
+.tabs__block{
+    position: relative;
+    padding: 20px;
+    font-size: 18px;
+    line-height: 24px;
+    display: none;
+}
+.tabs__block:before{
+    content: "";
+    height: 50px;
+    width: 33.333%;
+    position: absolute;
+    top: -50px;
+}
+.tabs__block:nth-child(1):before {
+    background-color: #eb8698;
+    left: 0;
+}
+.tabs__block:nth-child(2):before {
+    background-color: #9278aa;
+    left: 33.333%;
+}
+.tabs__block:nth-child(3):before {
+    background-color: #97c67d;
+    right: 0;
+}
+.tabs__block:nth-child(1) {
+    background-color: #eb8698;
+}
+.tabs__block:nth-child(2) {
+    background-color: #9278aa;
+}
+.tabs__block:nth-child(3) {
+    background-color: #97c67d;
+}
+.tabs__block:target{
+    display: block;
+}
+.tabs__item span {
+    position: relative;
+    z-index: 2;
+}
+@media (max-width: 600px) {
+    .tabs__item span{
+        display: block;
+        width: 100px;
+        padding: 0 5px;
+        white-space: nowrap;
+        text-align: center;
+        overflow: hidden;
+        font-size: 14px;
+        text-overflow: ellipsis;
+    }
+}*/
+/*tabs end*/
+
+/*dropdown*/
+/*.wrapper {
+    height: 100%;
+    padding: 50px;
+}
+.menu a {
+    text-decoration: none;
+}
+.menu a.parent {
+    margin: 0 25px 0 0;
+}
+.menu li {
+    position: relative;
+    list-style: none;
+}
+.menu__list {
+    display: flex;
+}
+.menu__list > li {
+    margin: 0px 30px 0px 0px;
+}
+.menu__link {
+    color: #fff;
+}
+.sub-menu__list {
+    display: none;
+    min-width: 300px;
+    position: absolute;
+    left: 0;
+    top: 20px;
+    padding: 20px 0 0 0;
+}
+.sub-menu__list > li {
+    background-color: #fff;
+}
+.sub-menu__link {
+    color: #000;
+    display: inline-block;
+    padding: 5px 10px;
+}
+.sub-sub-menu__list {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    min-width: 300px;
+    padding: 0 0 0 5px;
+}
+.sub-sub-menu__list > li {
+    background-color: #000;
+}
+.sub-sub-menu__link {
+    color: #fff;
+    display: inline-block;
+    padding: 5px 10px;
+} 
+.arrow {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 0;
+    height: 0;
+    border-top: 10px solid #fff;
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent; 
+}
+.arrow.active {
+    transform: rotate(-180deg);
+}
+body.mouse .menu__list > li:hover .sub-menu__list {
+    display: block;
+}
+body.mouse .sub-menu__list > li:hover .sub-sub-menu__list {
+    display: block;
+}
+body.touch .sub-menu__list.open {
+    display: block;
+}
+body.touch .sub-sub-menu__list.open {
+    display: block;
+}
+body.touch .arrow {
+    display: block;
+}
+.sub-menu__arrow.arrow {
+    right: 10px;
+    border-left: 10px solid #000;
+    border-right: none;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+}
+@media (max-width: 767px) {
+    .wrapper {
+        padding: 15px;
+    }
+    .menu__list {
+        display: block;
+    }
+    .menu__list > li {
+        margin: 0 0 10px 0;
+    }
+    .sub-menu__list {
+        position: relative;
+        left: 0;
+        top: 0;
+    }
+    .sub-sub-menu__list {
+        padding: 0 5px;
+        position: relative;
+        left: 0;
+        top: 0;
+    }
+    .sub-menu__arrow.arrow {
+        right: 10px;
+        top: 15px;
+        border-bottom: none;
+        border-left: 10px solid transparent;
+        border-top: 10px solid #000;
+        border-right: 10px solid transparent;
+    }
+}
+/*dropdown end*/
+
+/*spoller&accordion*/
+/*body{
+    height: 100%;
+    line-height: 1;
+    font-size: 16px;
+    background-color: #333;
+    color: #fff;
+}
+.wraper{
+    min-height: 100%;
+    padding: 50px;
+}
+.block {
+    margin: 0px 0px 30px 0px;
+}
+.block__item {
+    margin: 0px 0px 10px 0px;
+}
+.block__title {
+    width: 100%;
+    text-align: left;
+    font-size: 18px;
+    background-color: transparent;
+    color:#fff;
+    padding: 10px;
+    position: relative;
+}
+.block._spoller-init .block__title {
+    cursor: pointer;
+    padding: 10px 40px 10px 10px;
+}
+.block._spoller-init .block__title::before,
+.block._spoller-init .block__title::after  
+{ 
+    content:"";
+    width: 20px;
+    height: 1px;
+    background-color: #fff;
+    position: absolute;
+    right: 10px;
+    top: 20px;
+    transition: transform 0.3s ease 0s;
+}
+.block._spoller-init .block__title::after {
+    transform: rotate(-90deg);
+}
+.block._spoller-init .block__title._spoller-active::after {
+    transform: rotate(0deg);
+}
+.block__text{
+    padding: 0 10px 10px;
+    line-height: 130%;
+}
+.block_1 .block__item {
+    background-color: #776084;
+}
+.block_2 .block__item {
+    background-color: #794f45;
+}
+.block_3 .block__item {
+    background-color: #7a956b;
+}*/
+/*spoller&accordion end*/
+
+/*lazy loading*/
+/* *,
+*::before,
+*::after {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
+}
+a {
+    text-decoration: none;
+}
+ul,
+ol,
+li {
+    list-style: none;
+}
+img {
+    vertical-align: top;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: inherit;
+    font-size: inherit;
+}
+html,
+body {
+    height: 100%;
+    line-height: 1;
+    font-size: 14px;
+    background-color: #333;
+    color: #fff;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+.wrapper {
+    min-height: 100%;
+}
+._loading-icon {
+    background: url("../images/loading.gif") center / 50px no-repeat;
+    height: 50px;
+}
+.page {
+    padding: 30px 0;
+}
+.page__container {
+    max-width: 800px;
+    margin: 0px auto;
+}
+.page__section {
+    padding: 30px;
+}
+.page__section_1 {
+    background-color: #794f45;
+}
+.page__section_2 {
+    background-color: #7a956b;
+}
+.page__section_3 {
+    background-color: #77608d;
+}
+.page__title {
+    font-size: 30px;
+    margin: 0px 0px 30px 0px;
+}
+.page__text {
+    font-size: 16px;
+    line-height: 150%;
+}
+.page__text *:last-child {
+    margin-bottom: 0;
+}
+.page__text p {
+    margin: 0px 0px 15px 0px;
+}
+.page__sub-title {
+    font-size: 24px;
+    margin: 0px 0px 30px 0px;
+}
+.page__images {
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+.page__image {
+    position: relative;
+    padding: 0px 0px 90% 0px;
+    background: url("../images/loading.gif") center / 50px no-repeat;
+}
+.page__image img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+}
+.page__map {
+    padding: 0px 0px 50% 0px;
+    position: relative;
+    background: url("../images/loading.gif") center / 50px no-repeat;
+}
+.page__map iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+} */
+/*lazy loading end*/
+
+/* modal */
+/*Обнуление*/
+/* *,
+*:before,
+*:after {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+html,
+body {
+    height: 100%;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: #fff;
+    font-size: 18px;
+    line-height: 180%;
+    background-color: #383838;
+}
+body.lock {
+    overflow: hidden;
+}
+a {
+    color: red;
+}
+a:hover {
+    text-decoration: none;
+}
+p {
+    margin: 0px 0px 20px 0px;
+}
+.wrapper {
+    overflow: hidden;
+    min-height: 100%;
+}
+._container {
+    max-width: 1070px;
+    margin: 0px auto;
+    padding: 0px 15px;
+}
+#header {
+    width: 100%;
+    height: 100px;
+    background-color: #fff;
+}
+.popup {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    top: 0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transition: all 0.8s ease 0s;
+}
+.popup:target {
+    opacity: 1;
+    visibility: visible;
+}
+
+.popup__body {
+    min-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 10px;
+}
+.popup__content {
+    background-color: #fff;
+    color: #000;
+    max-width: 800px;
+    padding: 30px;
+    position: relative;
+
+}
+.popup__close {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+.popup__title {
+    font-size: 40px;
+    margin: 0px 0px 1em 0px;
+}
+.popup__area {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+} */
+/* modal end */
+
+
+
+
+/*burger jquery*/
+/* *,
+*:before,
+*:after {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
+}
+html,
+body {
+    height: 100%;
+}
+.wrapper {
+}
+.header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 50;
+}
+.container {
+    max-width: 1180px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+.header:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #5e5373;
+    z-index: 2;
+}
+.header__body {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    align-items: center;
+}
+.header__list {
+    display: flex;
+    position: relative;
+    z-index: 2;
+}
+.header__logo {
+    flex: 0 0 60px;
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+    z-index: 3;
+}
+.header__logo img {
+    max-width: 100%;
+    display: block;
+}
+
+.header__list li {
+    list-style: none;
+    margin: 0 0 0 20px;
+}
+.header__link {
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 18px;
+    text-decoration: none;
+}
+.header__burger {
+    display: none;
+}
+@media (max-width: 767px) {
+    body.lock{
+        overflow:hidden;
+    }
+    .header__body {
+        height: 50px;
+    }
+    .header__logo {
+        flex: 0 0 40px;
+    }
+    .header__burger {
+        display: block;
+        width: 30px;
+        height: 20px;
+        position: relative;
+        z-index: 3;
+    }
+    .header__burger span {
+        position: absolute;
+        background-color: #fff;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        top: 9px;
+        transition: all 0.8s ease 0s;
+    }
+    .header__burger:before,
+    .header__burger:after {
+        content: "";
+        background-color: #fff;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        left: 0;
+    }
+    .header__burger:before {
+        top: 0;
+    }
+    .header__burger:after {
+        bottom: 0;
+    }
+    .header__burger.active span {
+        transform: scale(0);
+    }
+    .header__burger.active:before {
+        transform: rotate(45deg);
+        top: 9px;
+    }
+    .header__burger.active:after {
+        transform: rotate(-45deg);
+        bottom: 9px;
+    }
+    .header__menu {
+        position: fixed;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: teal;
+        padding: 70px 10px 20px 10px;
+        transition: all 0.8s ease 0s;
+        overflow: auto;
+    }
+    .header__menu.active {
+        top:0;
+    }
+    .header__list {
+        display: block;
+    }
+    .header__list li {
+        margin: 0 0 20px 0;
+    }
+    .header__link { 
+        font-size: 24px;
+    }
+}
+.content {
+    padding: 100px 0 0 0;
+}
+.content__text {
+    font-size: 18px;
+    line-height: 25px;
+}
+.content__text p {
+    margin: 0 0 20px 0;
+} */
+/*burger jquery end*/
+
+
+
+/*swiper js*/
+/* *,
+*::before,
+*::after {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
+}
+a {
+    text-decoration: none;
+}
+ul,
+ol,
+li {
+    list-style: none;
+}
+img {
+    vertical-align: top;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: inherit;
+    font-size: inherit;
+}
+html,
+body {
+    height: 100%;
+    line-height: 1;
+    font-size: 14px;
+    background-color: #333;
+    color: #fff;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+.wrapper {
+    padding: 30px;
+    min-height: 100%;
+}
+.title {
+    font-size: 30px;
+    font-weight: 700; 
+    color: #fff;
+    margin: 0px 0px 30px 0px;
+}
+.image-slider {
+    padding: 30px 0 70px 0;
+}
+.image-slider__wrapper {
+
+}
+.image-slider__slide {
+
+}
+.image-slider__image {
+    text-align: center;
+}
+.image-slider__image img {
+    max-width: 100%;
+}
+.image-slider .swiper-button-prev::after,
+.image-slider .swiper-button-next::after{
+    color: #fff;
+    font-size: 80px;
+}
+.image-slider .swiper-pagination {
+    bottom: 0;
+}
+.image-slider .swiper-pagination-bullet {
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    font-size: 14px;
+    background-color:#fff;
+} */
+/*swiper js end*/
+
+
+
+/*slick slider js*/
+ /* *,
+*::before,
+*::after {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
+}
+html,
+body {
+    height: 100%;
+    background-color: #333;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    color: #fff;
+    font-size: 25px;
+}
+.wrapper {
+    height: 100%;
+    padding: 50px;
+}
+.slick-list{
+    overflow: hidden;
+}
+.slider .slick-track{
+    display: flex;
+    align-items: flex-start;
+}
+.slider{
+    position: relative;
+    padding: 0 60px;
+}
+.slider .slick-arrow{
+    position: absolute;
+    top: 50%;
+    margin: -50px 0 0 0;
+    z-index: 10;
+    font-size: 0;
+    width: 30px;
+    height: 60px;
+}
+.slider .slick-arrow.slick-prev{
+    left: 0;
+    background: url('../images/prev.png') 0 0 / 100% no-repeat;
+}
+.slider .slick-arrow.slick-next{
+    right: 0;
+    background: url('../images/next.png') 0 0 / 100%  no-repeat;
+}
+.slider .slick-dots{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.slider .slick-dots li {
+    list-style: none;
+    margin: 0 10px;
+}
+.slider .slick-dots button {
+    font-size: 0;
+    width: 10px;
+    height: 10px;
+    background-color: #fff;
+    border-radius: 50%;
+}
+.slider .slick-dots .slick-active button{
+    background-color: transparent;
+    border: 1px solid #fff;
+}
+.slider__item{
+    width: 250px;
+    height: 550px;
+    opacity: 0.4;
+    text-align: center;
+}
+.slider__item.slick-center{
+    opacity: 1;
+} */
+/*slick slider js end*/
